# securedrop-dev

./: README.md
.github/workflows/: eol.yml
eol-check/: eol.ics  eol.yaml  eol.yaml.sample  eol_check.py  pyproject.toml  sync_versions.py
src/: Makefile  pyproject.toml
